--- a/mars-generator/src/main/AndroidManifest.xml
+++ b/mars-generator/src/main/AndroidManifest.xml
@@ -2,5 +2,7 @@
           package="com.winning.mars_generator">
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 </manifest>
