--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     api 'io.reactivex.rxjava2:rxjava:2.1.0'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
