--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
+    api 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     api 'io.reactivex.rxjava2:rxjava:2.1.0'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    api 'com.google.code.gson:gson:2.8.0'
 }
