增加数据达到规定的高值时进行队列FIFO进出以及长连接上报

--- a/mars-consumer/build.gradle
+++ b/mars-consumer/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation project(':mars-generator')
+    implementation ('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
