--- a/mars-consumer/build.gradle
+++ b/mars-consumer/build.gradle
@@ -22,6 +22,10 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -34,5 +38,5 @@ dependencies {
     }
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 }
