--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -13,6 +13,11 @@ android {
 
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
