--- a/mars-consumer/src/main/AndroidManifest.xml
+++ b/mars-consumer/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.winning.mars_consumer">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application>
         <receiver android:name=".monitor.uploader.WakeCPUReceiver"/>
