--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    implementation 'com.squareup.haha:haha:2.0.3'
     api 'io.reactivex.rxjava2:rxjava:2.1.9'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
