修改demo以及增加cpu采样的采样时间

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".LeakActivity"/>
+        <activity android:name=".InflateActivity">
+        </activity>
     </application>
 
 </manifest>
