--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     api 'io.reactivex.rxjava2:rxjava:2.1.16'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
+    // TODO 将来可以将这个库去掉
     implementation 'com.yanzhenjie:permission:2.0.0-rc11'
 }
