用户行为跟踪

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".LeakActivity"/>
         <activity android:name=".InflateActivity">
         </activity>
+        <activity android:name=".UserBehaviorActivity">
+        </activity>
     </application>
 
 </manifest>
