修改禁用列表的存储结构

--- a/mars-consumer/build.gradle
+++ b/mars-consumer/build.gradle
@@ -9,7 +9,7 @@ ext {
     libraryDescription = 'APM'
     siteUrl = 'https://github.com/yuzhijun/Mars'
     gitUrl = 'https://github.com/yuzhijun/Mars.git'
-    libraryVersion = '1.0.3'
+    libraryVersion = '1.0.5'
 
     developerId = 'yuzhijun'
     developerName = 'yuzhijun'
@@ -52,8 +52,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
-    implementation project(':mars-generator')
-//    implementation 'com.winning.mars_generator:mars-generator:1.0.2'
+//    implementation project(':mars-generator')
+    implementation 'com.winning.mars_generator:mars-generator:1.0.3'
     //TODO 将来可以将这个库去掉
     implementation 'com.qianwen:update-app:3.5.2'
     implementation 'com.qianwen:okhttp-utils:3.8.0'
