--- a/mars-consumer/build.gradle
+++ b/mars-consumer/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
-//    implementation project(':mars-generator')
-    implementation 'com.winning.mars_generator:mars-generator:1.0.3'
+    implementation project(':mars-generator')
+//    implementation 'com.winning.mars_generator:mars-generator:1.0.3'
     //TODO 将来可以将这个库去掉
     implementation 'com.qianwen:update-app:3.5.2'
     implementation 'com.qianwen:okhttp-utils:3.8.0'
@@ -66,5 +66,5 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
