--- a/mars-generator/build.gradle
+++ b/mars-generator/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.0-rc11'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
